# ferrolearn

./: .gitignore  CHANGELOG.md  Cargo.toml  GAP-REPORT.md  goal-mode.md  goal.md  phase-0-coordinator.md  phase-1-foundation.md  phase-2-classical-ml.md  phase-3-completeness.md  phase-4-beyond-sklearn.md
ferrolearn-decomp/: Cargo.toml  README.md
ferrolearn-decomp/src/: cross_decomposition.rs  dictionary_learning.rs  factor_analysis.rs  fast_ica.rs  incremental_pca.rs  isomap.rs  kernel_pca.rs  lda_topic.rs  lib.rs  lle.rs  mds.rs  minibatch_nmf.rs  nmf.rs  pca.rs  sparse_pca.rs  spectral_embedding.rs  truncated_svd.rs  trustworthiness.rs  tsne.rs  umap.rs
ferrolearn-decomp/tests/: api_proof.rs  conformance_sklearn.rs  conformance_surface_coverage.rs  conformance_wave2.rs  divergence_classical_mds.rs  divergence_cross_decomposition.rs  divergence_dictionary_learning.rs  divergence_factor_analysis.rs  divergence_fast_ica.rs  divergence_fast_ica_attrs_2410.rs  divergence_incremental_pca.rs  divergence_incremental_pca_batch_default.rs  divergence_incremental_pca_config_grid.rs  divergence_incremental_pca_multibatch.rs  divergence_isomap.rs  divergence_isomap_transform_2401.rs  divergence_kernel_pca.rs  divergence_kernel_pca_2389.rs  divergence_lda_topic.rs  divergence_lle.rs  divergence_lle_ndim_2403.rs  divergence_locally_linear_embedding.rs  divergence_mds.rs  divergence_mds_grid_2406.rs  divergence_mds_norm0_niter.rs  divergence_mds_stress_2404.rs  divergence_minibatch_nmf.rs  divergence_nmf.rs  divergence_nmf_cd_nndsvd_2393.rs  divergence_nmf_cd_nndsvd_edge_2398.rs  divergence_nmf_cd_nndsvd_grid_2398.rs  divergence_non_negative_factorization.rs  divergence_nonfinite.rs  divergence_nonfinite_spillover.rs  divergence_pca.rs  divergence_pls_coef_orientation_2414.rs  divergence_smacof.rs  divergence_sparse_encode.rs  divergence_sparse_pca.rs  divergence_spectral_embedding.rs  (+7 more)
ferrolearn-linear/: Cargo.toml
ferrolearn-linear/src/: ard.rs  bayesian_ridge.rs  elastic_net.rs  elastic_net_cv.rs  glm.rs  huber_regressor.rs  isotonic.rs  lars.rs  lasso.rs  lasso_cv.rs  lda.rs  lib.rs  linalg.rs  linear_regression.rs  linear_svc.rs  linear_svr.rs  logistic_regression.rs  logistic_regression_cv.rs  multi_task_elastic_net.rs  multi_task_elastic_net_cv.rs  multi_task_lasso.rs  multi_task_lasso_cv.rs  nu_svm.rs  omp.rs  one_class_svm.rs  qda.rs  quantile_regressor.rs  ransac.rs  ridge.rs  ridge_classifier.rs  ridge_classifier_cv.rs  ridge_cv.rs  sgd.rs  svm.rs  svm_bounds.rs
ferrolearn-linear/src/optim/: lbfgs.rs
ferrolearn-linear/tests/: api_proof.rs  conformance_sklearn.rs  conformance_surface_coverage.rs  conformance_wave1.rs  divergence_ard_fit.rs  divergence_ard_return_std.rs  divergence_ard_scores.rs  divergence_ard_woodbury.rs  divergence_ard_woodbury_wellcond.rs  divergence_bayesian_ridge_fit.rs  divergence_bayesian_ridge_scores_final.rs  divergence_elastic_net_cv.rs  divergence_elastic_net_cv_degenerate.rs  divergence_elastic_net_numeric.rs  divergence_enet_path.rs  divergence_glm_fit.rs  divergence_glm_negative_sample_weight.rs  divergence_huber_fit.rs  divergence_huber_negative_weight.rs  divergence_isotonic_fit.rs  divergence_lars_path.rs  divergence_lars_path_gram.rs  divergence_lasso_cv_degenerate.rs  divergence_lasso_cv_folds.rs  divergence_lasso_lars_ic.rs  divergence_lasso_lars_nonfinite.rs  divergence_lasso_lars_path.rs  divergence_lasso_numeric.rs  divergence_lasso_path.rs  divergence_lda_fit.rs  divergence_lib.rs  divergence_linear_nonfinite.rs  divergence_linear_nonfinite_batch2.rs  divergence_linear_nonfinite_batch3.rs  divergence_linear_nonfinite_batch4.rs  divergence_linear_nonfinite_batch5.rs  divergence_linear_nonfinite_batch5_ordering.rs  divergence_linear_nonfinite_gaps.rs  divergence_linear_svc_fit.rs  divergence_linear_svr_fit.rs  (+37 more)
ferrolearn-preprocess/: Cargo.toml
ferrolearn-preprocess/src/: binarizer.rs  binary_encoder.rs  column_transformer.rs  count_vectorizer.rs  dict_vectorizer.rs  dummy_feature.rs  feature_hasher.rs  feature_scoring.rs  feature_selection.rs  function_transformer.rs  generic_univariate_select.rs  hashing.rs  image.rs  imputer.rs  iterative_imputer.rs  kbins_discretizer.rs  kernel_centerer.rs  knn_imputer.rs  label_binarizer.rs  label_encoder.rs  lib.rs  max_abs_scaler.rs  min_max_scaler.rs  multi_label_binarizer.rs  normalizer.rs  one_hot_encoder.rs  ordinal_encoder.rs  polynomial_features.rs  power_transformer.rs  quantile_transformer.rs  random_projection.rs  rfe.rs  robust_scaler.rs  select_from_model.rs  select_percentile.rs  selector_mixin.rs  sequential_feature_selector.rs  spline_transformer.rs  standard_scaler.rs  stat_selectors.rs  (+2 more)
ferrolearn-preprocess/tests/: api_proof.rs  conformance_sklearn.rs  conformance_surface_coverage.rs  conformance_wave6.rs  divergence_add_dummy_feature.rs  divergence_binarizer.rs  divergence_binarizers_2338.rs  divergence_column_transformer.rs  divergence_count_vectorizer.rs  divergence_dict_vectorizer.rs  divergence_feature_hasher.rs  divergence_feature_scoring.rs  divergence_feature_scoring_edges.rs  divergence_feature_selection.rs  divergence_function_transformer.rs  divergence_generic_univariate_select.rs  divergence_hashing_vectorizer.rs  divergence_image_graph.rs  divergence_image_patches.rs  divergence_imputer.rs  divergence_imputer_f32_mean.rs  divergence_imputer_f32_mean_nan.rs  divergence_iterative_imputer.rs  divergence_iterative_imputer_transform_replay.rs  divergence_iterative_imputer_values.rs  divergence_kbins_discretizer.rs  divergence_kbins_kmeans_duplicate_heavy.rs  divergence_kernel_centerer.rs  divergence_knn_imputer.rs  divergence_knn_imputer_fit_transform_split.rs  divergence_label_binarizer.rs  divergence_label_binarizer_overflow.rs  divergence_label_encoder.rs  divergence_label_encoder_msg_2353.rs  divergence_lib.rs  divergence_make_column_selector.rs  divergence_max_abs_scaler.rs  divergence_min_max_scaler.rs  divergence_min_max_scaler_constant_holdout.rs  divergence_min_max_scaler_inf.rs  (+44 more)
ferrolearn-test-oracle/: Cargo.toml
ferrolearn-test-oracle/src/: lib.rs
(+816 files in other folders)
