[package]
name = "ferrolearn-decomp"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Dimensionality reduction and decomposition for the ferrolearn ML framework"
readme = "README.md"
keywords = ["machine-learning", "pca", "svd", "dim-reduction", "decomposition"]
categories = ["science", "algorithms"]

[dependencies]
ferrolearn-core.workspace = true
# ferray is ferrolearn's numpy substrate (R-SUBSTRATE-1). PCA's full-SVD path
# routes through `ferray::linalg::svd_lapack` (LAPACK gesdd, bit-identical to
# scipy), which requires the workspace `openblas` feature on the ferray dep.
ferray.workspace = true
ndarray.workspace = true
num-traits.workspace = true
rand.workspace = true
rand_distr.workspace = true
rand_xoshiro.workspace = true
faer.workspace = true

[dev-dependencies]
approx.workspace = true
serde_json.workspace = true
proptest = "1"
ferrolearn-test-oracle = { path = "../ferrolearn-test-oracle" }
