[package]
name = "ferrolearn-test-oracle"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Oracle test utilities for validating ferrolearn against scikit-learn fixtures"
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ndarray = { workspace = true }
toml = "0.8"
